ADD: eb support FIX: search bar bug

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
 
 <div class="container">
   <table class="table table-hover">
-    <caption>WIP. Last updated: 5pm EST 7/21/20. Some figures may include infections of both students and faculty,
+    <caption>WIP. Last updated: 10am EST 7/24/20. Some figures may include infections of both students and faculty,
       depending on the data reporting quality of the source.
     </caption>
     <thead>
