--- a/templates/default.html
+++ b/templates/default.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- This is terrible code... we're more interested in the data :) -->
+
 <head>
   <title>University COVID-19</title>
   <meta charset="utf-8">
@@ -26,7 +28,10 @@
 
 
   <link rel="stylesheet" type="text/css" href="/static/css/style.css">
-  <link rel="shortcut icon" type="image/png" href="/static/favicon_io/favicon-16x16.png" />
+  <meta>
+  <link rel="icon" type="image/ico" href="{{ url_for('static',filename='favicon.ico') }}" />
+  <link rel="shortcut icon" type="image/ico" href="{{ url_for('static',filename='favicon.ico') }}" />
+  </meta>
   {% block head_script %}{% endblock %}
 </head>
 
@@ -35,7 +40,8 @@
   {% block body %}
 
   <nav class="navbar navbar-custom navbar-expand-sm">
-    <img src="/static/favicon_io/favicon-32x32.png" width="32" height="32" class="d-inline-block align-top" alt="">
+    <img src="{{ url_for('static',filename='favicon_io/favicon-32x32.png') }}" width="32" height="32"
+      class="d-inline-block align-top" alt="">
     <!-- Links -->
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
@@ -55,8 +61,11 @@
       <form class="form-inline" action="/" method="POST">
         <!-- input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         -->
-        <select class="browser-default custom-select" name="name" id="search_name" searchable="Search colleges..">
-          <option value="" disabled selected>Search colleges..</option>
+        <select class="browser-default custom-select" name="name" id="search_name" searchable="Search colleges.."
+          required>
+          <!--<option value="" disabled selected required>Search colleges..</option>-->
+          <option value="" disabled selected hidden>Search colleges...</option>
+
           {% for name in names %}
           <option value={{name.lower().replace(" ", "-").replace(",", "")}}>{{name}}</option>
           {% endfor %}
