--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,7 +8,7 @@
   <div class="container">
     <div class="form-group">
       <label for="name">Your Name</label>
-      <input type="text" class="form-control" name="name" id="name" placeholder="Example University">
+      <input type="text" class="form-control" name="name" id="name" placeholder="First Last">
     </div>
     <div class="form-group">
       <label for="contact">Your Contact Info</label>
