--- a/templates/default.html
+++ b/templates/default.html
@@ -32,6 +32,8 @@
   <link rel="icon" type="image/ico" href="{{ url_for('static',filename='favicon.ico') }}" />
   <link rel="shortcut icon" type="image/ico" href="{{ url_for('static',filename='favicon.ico') }}" />
   </meta>
+  <script data-ad-client="ca-pub-4460809422351415" async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   {% block head_script %}{% endblock %}
 </head>
 
