--- a/templates/default.html
+++ b/templates/default.html
@@ -4,7 +4,7 @@
 <!-- This is terrible code... we're more interested in the data :) -->
 
 <head>
-  <title>University COVID-19</title>
+  <title>CampusCovid University COVID-19 Tracker</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
