--- a/templates/default.html
+++ b/templates/default.html
@@ -34,6 +34,16 @@
   </meta>
   <script data-ad-client="ca-pub-4460809422351415" async
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173556206-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-173556206-1');
+  </script>
+
   {% block head_script %}{% endblock %}
 </head>
 
@@ -94,6 +104,12 @@
     {% endwith %}
   </div>
   {% endblock %}
+
+  <div class="container text-center">
+    <br>
+    <a class="legal-link" id="legal-link" href="/privacy">Privacy Policy</a>
+    <a class="legal-link" id="legal-link" href="/terms">Terms of Use</a>
+  </div>
 
   {% block scripts %}
   <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
