--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
 
 <div class="container">
   <table class="table table-hover">
-    <caption>WIP. Last updated: 4pm EST 7/26/20. Some figures may include infections of both students and faculty,
+    <caption>WIP. Last updated: 9am EST 7/27/20. Some figures may include infections of both students and faculty,
       depending on the data reporting quality of the source. For extra information, click the name of each school
       for access to daily case information and access to data sources.
     </caption>
