FIX: privacy policy/terms location

--- a/templates/index.html
+++ b/templates/index.html
@@ -108,9 +108,10 @@
       color: #ffffff !important;
     }
   </style>
-  <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet"><a class="bmc-button" target="_blank"
-    href="https://www.buymeacoffee.com/MhRYcSN"><img src="https://cdn.buymeacoffee.com/buttons/bmc-new-btn-logo.svg"
-      alt="Help us out"><span style="margin-left:5px;font-size:28px !important;">Help us out</span></a>
+  <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
+  <a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/MhRYcSN"><img
+      src="https://cdn.buymeacoffee.com/buttons/bmc-new-btn-logo.svg" alt="Help us out"><span
+      style="margin-left:5px;font-size:28px !important;">Help us out</span></a>
 </div>
 
 {% endblock %}
