FIX: privacy policy shitty workaround

--- a/templates/index.html
+++ b/templates/index.html
@@ -66,6 +66,7 @@
 
 </table>
 
+
 <div class="container text-center">
   <style>
     .bmc-button img {
@@ -113,6 +114,14 @@
       src="https://cdn.buymeacoffee.com/buttons/bmc-new-btn-logo.svg" alt="Help us out"><span
       style="margin-left:5px;font-size:28px !important;">Help us out</span></a>
 </div>
+
+<footer id="footer">
+  <div class="container text-center">
+    <br>
+    <a class="legal-link" id="legal-link" href="/privacy">Privacy Policy</a>
+    <a class="legal-link" id="legal-link" href="/terms">Terms of Use</a>
+  </div>
+</footer>
 
 {% endblock %}
 
