--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
 
 <div class="container">
   <table class="table table-hover">
-    <caption>WIP. Last updated: 7pm EST 7/27/20. Some figures may include infections of both students and faculty,
+    <caption>WIP. Last updated: 9am EST 7/29/20. Some figures may include infections of both students and faculty,
       depending on the data reporting quality of the source. Cases are entered by the date of first public announcement,
       not the date of the positive test. For extra detail, click the name of each school
       for access to daily case information and access to data sources.
