--- a/templates/404.html
+++ b/templates/404.html
@@ -6,8 +6,7 @@
   <h2>Page not found :(</h2>
   <a href="{{ url_for('index') }}">
     <p>Click Here
-  </a>To go to the Home Page</p>
+  </a>to go to the Home Page</p>
 </center>
 
-<!-- {{ url_for('index') }} is a var which returns url of index.html-->
 {% endblock %}
