ADD: back to home link on college page FIX: use CDNs for mdb css/js rather than serving locally

--- a/templates/college.html
+++ b/templates/college.html
@@ -8,6 +8,10 @@
   <canvas id="lineChart"></canvas>
 </div>
 
+<div class="container text-center">
+  <a href="/">Back to Homepage</a>
+</div>
+
 <div class="container">
   <table class="table table-hover">
     <thead>
