--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 <div class="container-sm" style="width: 350px; text-align: center">
   <div class="card text-white bg-secondary mb-3">
     <div class="card-header">
-      University COVID Cases
+      University COVID Cases after July 1
     </div>
     <div class="card-body">
       <h3 class="card-title">{{total}}+ students</h3>
